[package]
name = "sum-correction"
version = "0.1.0"
edition = "2024"

[dependencies]
GSL = "7.0.0"
rustyline = { version = "16.0.0", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
crossterm = "0.29.0"
statrs = "0.18.0"
rand = "0.9.2"
rand_distr = "0.5.1"
statistical = "1.0.0"
indicatif = "0.18.0"
color-eyre = "0.6.5"

